minor views change

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -49,25 +49,25 @@
                     </div> {% endcomment %}
                   </div>
                 </li>
-            {% for traveler in trip.travelers %}
+              {% for traveler in trip.travelers %}
               <li class="my-1">
                 <div class="row">
                   <div class="col-7">
                     <text class="text-small ms-2">{{ traveler.name }}</text>
                   </div>
                   <div class="col-5 text-end">
-                    <text class="text-small text-end me-2">{{ traveler.gender }}, {{ traveler.age }}</text>
+                    <text class="text-small text-end me-2">{{ traveler.gender }},&nbsp;&nbsp;{{ traveler.age }}</text>
                   </div>
                 </div>
               </li>
+              {% endfor %}
             </ol>
-            {% endfor %}
           </div>
         </div>
         {% endfor %}
         <div class="d-grid">
           <div class="text-center">
-            <button class="btn button-hover px-4 button-shadow border-0 mt-4">
+            <button class="btn button-hover px-4 button-shadow border-0 mt-2">
               <text class="text-normal">View All Trips</text>
             </button>
           </div>
