--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -27,7 +27,8 @@
 
         <a class="navbar-brand position-absolute translate-middle-x start-50" href="/" id="top-nav-title">Pack'd</a>
         {% if user.is_authenticated %}
-        {% comment %} <text class="navbar-brand position-absolute translate-middle-x start-50" id="top-nav-title">{{ title }}</text> {% endcomment %}
+        {% comment %} <text class="navbar-brand position-absolute translate-middle-x start-50" id="top-nav-title">{{
+          title }}</text> {% endcomment %}
         <ul class="nav d-flex" id="top-nav-right">
           <li class="d-flex align-items-center">
             <a href="{% url 'logout' %}" class="nav-link px-2 my-0">Log Out</a>
