finihsed upcoming and past trips

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -4,10 +4,20 @@ HTML:root {
     /* --nav: #087E8B; */
     --nav: #BFD7EA;
     --button-primary: #FFDC67;
-    --button-secondary: #BFD7EA;
+    --button-secondary: #96BEDD;
     --score-default: #16056B;
     --score-up: #BFD7EA;
     --score-down: pink;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: none;
+    color: initial;
 }
 
 body {
@@ -97,6 +107,7 @@ header {
 /* Top Nav */
 #top-nav {
     background-color: var(--nav);
+    height: 64px;
 }
 
 #top-nav-title {
@@ -251,4 +262,3 @@ header {
     font-weight: bold;
     color: red;
 }
-
