--- a/main_app/templates/trips/trip_form.html
+++ b/main_app/templates/trips/trip_form.html
@@ -6,10 +6,6 @@
   <form method="POST" action="{% url 'new_trip' %}">
     {% csrf_token %}
     <div class="mt-4">
-      <text class="text-header">ICON</text>
-      <text class="text-header">All Trips</text>
-    </div>
-    <div class="mt-4">
       <label for="searchTextField" class="form-label text-header">Where are you going?</label>
       <div class="input-group input-group-sm mb-3">
         <input type="search" class="form-control" name="search" id="searchTextField" required>
@@ -88,7 +84,7 @@
     </div>
     <div class="mt-4">
       <label for="number_items" class="form-label text-header">How much do you want to pack?</label>
-      <div class="row g-3 mt-1">
+      <div class="row g-3">
         <div class="col-4 ">
           <label class="card card-shadow card-packing" for="number_items_light">
             <input type="radio" class="btn-check" name="number_items" value="10" id="number_items_light">
@@ -132,7 +128,7 @@
     </div>
     <div class="mt-4">
       <label for="number_items" class="form-label text-header">What will you be doing there?</label>
-      <div class="row g-3 mt-1">
+      <div class="row g-3">
         {% for activity in activities %}
         {% if activity != "All" %}
         <div class="col-4">
@@ -153,56 +149,9 @@
         <text class="text-card-title">Generate List</text>
       </button>
     </div>
-
-    {% comment %} <div class="d-grid mt-2">
-      <a href={% url "new_trip" %} class="btn rounded-pill py-2 mt-4 button-shadow button-primary">
-        <text class="text-card-title">Generate List</text>
-      </a>
-    </div> {% endcomment %}
   </form>
 
-  {% comment %}
-  <form method="POST" action="{% url 'new_trip' %}">
-    {% csrf_token %}
-    where are you going?<br>
-    <input type="text" id="searchTextField" name="search" placeholder="Search City..."><br>
-    what day do you arrive?<br>
-    <input type="date" name="date" required><br>
-    travelers<br>
-    <p style="color:grey;">placeholder for information of added travelers</p>
-    name<br>
-    <input type="text" name="traveler-name" placeholder="Name..."><br>
-    age group<br>
-    <select name="agegroup" default="none">
-      <option value="" disabled selected hidden>choose age group</option>
-      <option value="infant">Infant/Young Child (0-3)</option>
-      <option value="child">Child (3-17)</option>
-      <option value="adult">Adult (18+)</option>
-    </select><br>
-    how much do you want to pack?<br>
-    light
-    <input type="checkbox" name="light">
-    medium
-    <input type="checkbox" name="medium">
-    everything
-    <input type="checkbox" name="everything"><br>
-
-    select activities<br>
-    <input type="checkbox" name="option1">
-    <input type="checkbox" name="option2">
-    <input type="checkbox" name="option3"><br>
-    <input type="checkbox" name="option4">
-    <input type="checkbox" name="option5">
-    <input type="checkbox" name="option6"><br>
-    <input type="checkbox" name="option7">
-    <input type="checkbox" name="option8">
-    <input type="checkbox" name="option9"><br>
-
-    <button>create my list</button>
-  </form> {% endcomment %}
-
-  <script defer type="text/javascript"
-    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
+  <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyABt5_xdXjRl4pFDKfdUtAM4Bv5lgt1vo8&libraries=places"></script>
   <script defer type="text/javascript" src="/static/javascript/trip_form.js"></script>
 
   {% endblock %}
