--- a/main_app/templates/trips/trip.html
+++ b/main_app/templates/trips/trip.html
@@ -72,7 +72,7 @@
   <div class="text-center">
     <button class="btn button-hover button-shadow border-0 mt-4" type="button" data-toggle="collapse"
       data-target=".multi-collapse" aria-expanded="false" aria-controls="collapseExample">
-      <text class="text-normal">+ Add item</text>
+      <text class="text-normal">+ Add Item</text>
     </button>
   </div>
 </div>
