--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container px-4 mt-5" id="mobile-container">
-  <text class="text-login-page">Sign Up</text>
+<div class="container px-4 mt-3" id="mobile-container">
+  <div class="d-grid text-center">
+    <div class="mt-3">
+      <text class="text-login-page">Sign Up</text><br>
+    </div>
+  </div>
+  <hr class="my-3"/>
   <form method="POST" class="mt-2" action="{% url 'signup' %}">
     {% csrf_token %}
     <div class="row">
@@ -22,7 +27,7 @@
         <div class="mb-3">
           <label for="login-username" class="form-label mb-1">Username</label>
           <input type="text" class="form-control" id="login-username" aria-describedby="username" name="username" required>
-          <small id="username-help" class="form-text text-muted">150 characters or less. Letters, digits and @/./+/-/_ only.</small>
+          <small id="username-help" class="form-text text-muted">Letters, digits and @/./+/-/_ only.</small>
         </div>
       </div>
       <div class="col-12">
@@ -35,7 +40,7 @@
         <div class="mb-3">
           <label for="login-password" class="form-label mb-1">Confirm Password</label>
           <input type="password" class="form-control" id="login-password" name="password2" autocomplete="new-password" required>
-          <small id="username-help" class="form-text text-muted">Enter the same password as before, for verification.</small>
+          <small id="username-help" class="form-text text-muted">Enter the same password as before.</small>
         </div>
       </div>
       <div class="d-grid">
@@ -49,8 +54,8 @@
     {% csrf_token %}
 
   </form> {% endcomment %}
-  <p class="text-center text-muted my-2">or</p>
-  <div class="d-grid">
+  {% comment %} <p class="text-center text-muted my-2">or</p> {% endcomment %}
+  <div class="d-grid mt-3">
     <a href="{% url 'login' %}" class="btn rounded-pill py-2 button-shadow button-height">
       <text class="text-header">Login</text>
     </a>
