--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -62,7 +62,7 @@
           <a href="{% url 'upcoming_trips' %}" class="nav-link py-1 px-3 my-0">Upcoming Trips</a>
         </li>
         <li>
-          <a href="{% url 'home' %}" class="nav-link py-1 px-3 my-0">Past Trips</a>
+          <a href="{% url 'past_trips' %}" class="nav-link py-1 px-3 my-0">Past Trips</a>
         </li>
         <li>
           <a href="{% url 'profile' user.id %}" class="nav-link py-1 px-3 my-0">Profile</a>
